Some typo fixing

--- a/0_Limit Calculator Description/sections/userGuide.tex
+++ b/0_Limit Calculator Description/sections/userGuide.tex
@@ -19,10 +19,10 @@
 	Ribų skaičiavimo sistema pateikia vieną iš keturių atsakymų, kurį parodo internetinis puslapis:
 
 	\begin{itemize}
-		\item Jei riba egzistuoja ir programa ją rado, grąžinama rasta riba.
-		\item Jei riba neegzistuoja ir programa, pranešama, kad riba neegzistuoja.
+		\item Jei riba egzistuoja, grąžinama rasta riba.
+		\item Jei riba neegzistuoja, pranešama, kad riba neegzistuoja.
 		\item Jei įvesta funkcija arba taškas yra sintaksiškai neteisingi, apie tai pranešama ir parodoma klaidos vieta.
-		\item Jei programa negalėjo nustatyti ribos arba ar riba išvis egzistuoja, pranešama, kad nepavyko išanalizuoti ribos.
+		\item Jei programa negalėjo nustatyti ribos arba jos neegzistavimo, pranešama, kad nepavyko išanalizuoti ribos.
 	\end{itemize}
 	
 	\begin{table} [H]
