--- a/0_Limit Calculator Description/sections/theoreticalPart.tex
+++ b/0_Limit Calculator Description/sections/theoreticalPart.tex
@@ -170,6 +170,21 @@ Tokiu atveju, naudojame eurisitinę analizę.
     Operacijos $f(x)^{g(x)}$ bendru atveju išskleisti negalime. Šiai operacijai atlikti mes ją perrašome į $exp(g(x) \cdotp ln(f(x)))$,
     o šių funkcijų skaičiavimas jau buvo pateiktas aukščiau.
 
+	Jei skleidžiame funkciją kurios apibrėžimo sritis nėra visa realiųjų skaičių aibė, pirma reikia patikrinti funkcijos
+	argumento ribą. Iš mūsų palaikomų funkcijų tokia funkcija yra tik natūrinis logaritmas. Kai skleidžiame $ln(f(x))$,
+	pirma turime patikrinti $f(x)$ skleidinį:
+
+	\begin{itemize}
+		\item Jei $f(x)$ skleidinys diverguoja, patikriname į kurią begalybę - jei į teigiamą arba abi, riba yra $+\infty$
+			(grąžiname kaip euristinę informaciją).
+		\item Jei $f(x)$ skleidinys konverguoja į teigiamą reikšmę, funkciją skleidžiame įprastai.
+		\item Jei $f(x)$ skleidinys konverguoja į neigiamą reikšmę, tai ieškome ribos neribiniame taške -- tokiu atveju pranešame klaidą.
+		\item Jei $f(x)$ skleidinys konverguoja į 0, patikriname sekančius skleidinio narius -- iš jų galime nustatyti
+			iš kurios pusės į 0 artėja $f(x)$. Jei tik iš neigiamos -- pranešame klaidą dėl neribinio taško. Jei ne --
+			$ln(f(x))$ riba yra $-\infty$ (grąžiname kaip euristinę informaciją).
+	\end{itemize}
+
+
 \subsection{Paklaidos skaičiavimas}
 	Laipsnių eilutės ribą paprasčiausia skaičiuoti kai $x$ artėja į 0:
 	\begin{itemize}
@@ -181,7 +196,7 @@ Tokiu atveju, naudojame eurisitinę analizę.
 			koeficiento ženklui.
 	\end{itemize}
 
-	
+
 	Todėl ribą visada skaičiuojame kai $x$ artėja į 0. Jei duotas kitoks taškas, galime vietoj $x$ įsistatyti keitinį:
 	\begin{itemize}
 		\item Jei duotas baigtinis taškas $a$, vietoj $x$ įsistatome $a + x$.
